wip: ClusterImplementation